# KB

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  setup.sh  start.sh
.claude/: settings.json
frontend-react/: index.html  package-lock.json  package.json  vite.config.ts
frontend-react/src/: App.tsx  index.css  main.tsx  types.ts  typo-js.d.ts
frontend-react/src/api/: index.ts
frontend-react/src/components/: Layout.tsx
frontend-react/src/components/editor/: CalloutBlock.tsx  SpellCheck.ts
frontend-react/src/context/: AuthContext.tsx  ProjectContext.tsx  index.ts
frontend-react/src/pages/: CollectionPage.tsx  CollectionsPage.tsx  DocumentPage.tsx  GraphPage.tsx  HomePage.tsx  LoginPage.tsx  ProjectsPage.tsx  SearchPage.tsx  SettingsPage.tsx
logs/: mimix.log.2026-06-04
mcp-server/: http-server.js  index.js  package-lock.json  package.json  ui-mcp-server.js
migrations/: 0001_initial.sql  0002_add_projects.sql  0003_collections_slug_per_project.sql  0004_fix_migration_foreign_keys.sql  0005_auth.sql
observedb/data/: settings.json
observedb/data/sqlite/: knowledge.db
observedb/data/tantivy/: .managed.json  .schema_version  meta.json
src/: auth.rs  config.rs  error.rs  main.rs  state.rs
src/api/: apikeys.rs  attachments.rs  auth.rs  backup.rs  collections.rs  documents.rs  graph.rs  mod.rs  projects.rs  search.rs  settings.rs  users.rs
src/db/: mod.rs
src/models/: attachment.rs  collection.rs  document.rs  mod.rs  project.rs
src/search/: index.rs  mod.rs
