[package]
name = "kb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kb"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
pulldown-cmark = "0.12"
regex = "1"
slug = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
mime_guess = "2"
dotenvy = "0.15"
